SPRING SECURITY WITH MYSQL DOING...

--- a/spring-jsf-1/src/main/webapp/template/page/pageHeader.xhtml
+++ b/spring-jsf-1/src/main/webapp/template/page/pageHeader.xhtml
@@ -9,11 +9,11 @@
 				</div>
 				<div id="menu">
 					<ul>
-						<li><a href="#">HOME</a></li>
-						<li><a href="#">JAVA</a></li>
-						<li><a href="#">CAPOEIRA</a></li>
-						<li><a href="#">LANGUAGES</a></li>
-						<li><a href="#">OFFICE</a></li>
+						<li><a href="/view/pages/home.jsf">HOME</a></li>
+						<li><a href="/view/pages/java.jsf">JAVA</a></li>
+						<li><a href="/view/pages/capoeira.jsf">CAPOEIRA</a></li>
+						<li><a href="/view/pages/languages.jsf">LANGUAGES</a></li>
+						<li><a href="/view/pages/office.jsf">OFFICE</a></li>
 					</ul>
 				</div>
 			</div>
