--- a/spring-jsf-1/src/main/webapp/view/login/error.xhtml
+++ b/spring-jsf-1/src/main/webapp/view/login/error.xhtml
@@ -7,7 +7,9 @@
 	xmlns:p="http://primefaces.org/ui">
 	<h:body>
 		<ui:composition template="/template/page/pageLayout.xhtml">
-		
+			<ui:define name="header">
+				<h1>ERROR IN THE LOGIN</h1>
+			</ui:define>
 		</ui:composition>
 	</h:body>
 </html>
