--- a/spring-jsf-1/src/main/webapp/view/app/listUser.xhtml
+++ b/spring-jsf-1/src/main/webapp/view/app/listUser.xhtml
@@ -36,7 +36,7 @@
 					</p:column>
 
 					<p:column headerText="EMAIL">
-						<h:outputText value="#{user.email}" />
+						<h:outputText value="#{user.username}" />
 					</p:column>
 
 					<p:column headerText="PASSWORD">
